--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,8 @@ gatling {
     scalaVersion '2.12.8'
     simulations = [ 
         //'uk.gov.hmcts.reform.probate.simulations.ProbateCaveat'
-        'uk.gov.hmcts.reform.probate.simulations.Probate_ApplicationSimulation'
+        //'uk.gov.hmcts.reform.probate.simulations.Probate_ApplicationSimulation'
+        'uk.gov.hmcts.reform.probate.performance.simulations.ProbateApplication'
         ]
 }
 
