--- a/build.gradle
+++ b/build.gradle
@@ -50,10 +50,9 @@ dependencies {
 gatling {
     toolVersion '3.2.0'
     scalaVersion '2.12.8'
-    simulations = [ 
-        //'uk.gov.hmcts.reform.probate.simulations.ProbateCaveat'
-        //'uk.gov.hmcts.reform.probate.simulations.Probate_ApplicationSimulation'
+    simulations = [
         'uk.gov.hmcts.reform.probate.performance.simulations.ProbateApplication'
+        //'uk.gov.hmcts.reform.probate.performance.simulations.Caveat'
         ]
 }
 
