Setting up an initial scenario

--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,8 @@ gatling {
     simulations = [
         //'uk.gov.hmcts.reform.probate.performance.simulations.ProbateApplication'
         //'uk.gov.hmcts.reform.probate.performance.simulations.ProbateIntestacy'
-        'uk.gov.hmcts.reform.probate.performance.simulations.Caveat'
+        //'uk.gov.hmcts.reform.probate.performance.simulations.Caveat'
+        'uk.gov.hmcts.reform.probate.performance.simulations.Probate'
         ]
 }
 
