--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id "org.owasp.dependencycheck" version "6.0.2"
-    id 'scala'
+    id 'scala' version '2.13.3'
     id 'com.github.lkishalmi.gatling' version '3.3.4'
-    id 'groovy'
+    id 'groovy' version '3.0.6'
     id 'com.gradle.plugin-publish' version '0.12.0'
-    id 'maven-publish'
+    id 'maven-publish' version '6.6.1'
 }
 
 //apply plugin: 'java'
