--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'org.owasp.dependencycheck' version '5.1.0'
     id 'scala'
     id 'com.github.lkishalmi.gatling' version '3.0.2'
-    id 'java-gradle-plugin'
+    //id 'java-gradle-plugin'
     id 'groovy'
     id 'com.gradle.plugin-publish' version '0.9.8'
     id 'maven-publish'
@@ -12,6 +12,9 @@ plugins {
 apply plugin: 'scala'
 group 'uk.gov.hmcts.reform'
 version = '1.0'
+
+sourceCompatibility = "11"
+targetCompatibility = "11"
 
 jar {
     manifest {
