--- a/build.gradle
+++ b/build.gradle
@@ -1,76 +1,51 @@
 plugins {
-    id 'org.owasp.dependencycheck' version '8.0.2'
+    id 'org.owasp.dependencycheck' version '8.2.1'
     id 'scala'
-    id 'com.github.lkishalmi.gatling' version '3.0.2'
-    //id 'java-gradle-plugin'
-    id 'groovy'
-    id 'com.gradle.plugin-publish' version '0.9.8'
-    id 'maven-publish'
+    id 'java-library'
+    id 'io.gatling.gradle' version '3.9.3.1'
 }
 
-//apply plugin: 'java'
-apply plugin: 'scala'
-group 'uk.gov.hmcts.reform'
-version = '1.0'
-
-sourceCompatibility = "11"
-targetCompatibility = "11"
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
 
 tasks.withType(JavaExec) {
+    /* Configure the size of the JVM if necessary
     jvmArgs = ['-Xms1024m', '-Xmx2048m']
+    */
     /* Use the following args to build a report when a test was terminated
     args = [
-        "--reports-only", "fact-20201109092032896",
+        "--reports-only", "<gatling-run-id>",
         '--results-folder', file('build/reports/gatling').absolutePath,
         ]
     */
 }
 
+tasks.withType(Copy).all{
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
 repositories {
-    jcenter()
-}
-
-ScalaCompileOptions.metaClass.daemonServer = true
-ScalaCompileOptions.metaClass.fork = true
-ScalaCompileOptions.metaClass.useAnt = false
-ScalaCompileOptions.metaClass.useCompileDaemon = false
-
-ext {
-    gatlingVersion = '3.3.1'
-    scalaVersion = '2.12.12'
-}
-
-dependencies {
-    gatling "org.scala-lang:scala-library:${scalaVersion}"
-    gatling "io.gatling:gatling-app:${gatlingVersion}"
-    gatling "io.gatling.highcharts:gatling-charts-highcharts:${gatlingVersion}"
-    //gatlingImplementation "groupio.rest-assured:rest-assured:4.3.1"
-    gatling "com.warrenstrange:googleauth:1.5.0"
+    mavenCentral()
 }
 
 gatling {
-    toolVersion '3.3.1'
-    scalaVersion '2.12.12'
-    simulations = [
-            'simulations.Probate_Simulation'
-    ]
-}
-
-test {
-    testLogging {
-        showStandardStreams = true
+    gatlingVersion '3.9.3'
+    scalaVersion '2.13.10'
+    simulations = {
+        include "simulations/Probate_Simulation.scala"
     }
-    dependsOn("publishToMavenLocal")
-    systemProperty "com.github.lkishalmi.gatling.version", project.version
 }
 
-pluginBundle {
-    website = 'https://github.com/lkishalmi/gradle-gatling-plugin'
-    vcsUrl = 'https://github.com/lkishalmi/gradle-gatling-plugin'
-    description = 'Gatling Simulation Execution'
-    tags = ['gatling', 'load test', 'stress test', 'performance test', 'scala']
-
-
+sourceSets {
+    gatling {
+        scala {
+            srcDir 'src/gatling/simulations'
+        }
+        resources {
+            srcDir 'src/gatling/resources'
+        }
+    }
 }
-
-ext ['netty.version'] = '4.0.51.Final'
