Adding Stats Generator code

--- a/build.gradle
+++ b/build.gradle
@@ -73,3 +73,26 @@ sourceSets {
         }
     }
 }
+
+configurations {
+    gatlingImplementation.extendsFrom implementation
+    gatlingRuntimeOnly.extendsFrom runtimeOnly
+}
+
+/* Generate stats per transaction for use in Jenkins*/
+ext {
+    transactionNamesToGraph = ["Probate_390_DeclarationSubmit", "Probate_440_ExecTwoDeclarationSubmit", "Probate_600_LoadCitizenHub"] // set the transactions to graph here
+}
+
+tasks.register('generateStats', JavaExec) {
+    dependsOn tasks.named('gatlingRun')
+    dependsOn tasks.named('compileGatlingScala')
+    mainClass.set('stats.GenerateStatsByTxn')
+    args = transactionNamesToGraph
+    classpath = sourceSets.gatling.runtimeClasspath + project(":common-performance").sourceSets.main.runtimeClasspath
+}
+
+// Ensure it runs after Gatling
+tasks.named('gatlingRun') {
+    finalizedBy tasks.named('generateStats')
+}
